# hyprwallhaven

./: Cargo.toml  LICENSE  README.md  hyprwallhaven.desktop  hyprwallhaven.toml
.github/workflows/: aur.yml  release.yml
aur/: .SRCINFO  PKGBUILD
aur-bin/: PKGBUILD
contrib/: hyprwallhaven.service
contrib/aur/hyprwallhaven-bin/: PKGBUILD
src/: config.rs  hyprland.rs  hyprlock.rs  main.rs  state.rs  ui.rs  wallhaven.rs
