[package]
name = "hyprwallhaven"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for managing Wallhaven wallpapers on Hyprland with fuzzel integration"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/USERNAME/hyprwallhaven"
keywords = ["wallpaper", "wallhaven", "hyprland", "cli", "fuzzel"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
open = "5.0"
toml = "0.8"
anyhow = "1.0"
